[Merge] Water Level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,8 +4,8 @@
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel.ALS_DemoLevel
-GameDefaultMap=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel.ALS_DemoLevel
+EditorStartupMap=/Game/UI/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/UI/MainMenuLevel.MainMenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
