[AlphaBuild] Fixed build errors and UI errors.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=08B4780E4C9DA4076CD388939E7A7DAA
+ProjectName=CloudHunt
+CompanyName=NUS CS4350 TEAM 2
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="../../../../Unreal Projects/CloudHuntBuild")
+
