--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.CustomDepth=3
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/UI/MainMenuLevel.MainMenuLevel
