--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 EditorStartupMap=/Game/UI/MainMenuLevel.MainMenuLevel
 GameDefaultMap=/Game/UI/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/AdvancedLocomotionV4/Blueprints/GameModes/ALS_GameMode_SP.ALS_GameMode_SP_C
+GameInstanceClass=/Game/CHGameInstance.CHGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
