[OpenWorld] Pause Menu, Essences

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -147,7 +147,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="Boost",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="Flare",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="RagdollAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="RagdollAction",bShift=True,bCtrl=True,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SelectRotationMode_1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="SelectRotationMode_2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
 +ActionMappings=(ActionName="CameraAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
@@ -162,6 +162,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ThrowSmokeGrenade",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="ToggleBinocular",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +ActionMappings=(ActionName="CycleThrowableSelection",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
