--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,9 @@
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.CustomDepth=3
+r.DefaultFeature.MotionBlur=False
+r.VirtualTextures=False
+r.Shadow.Virtual.Enable=1
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/UI/MainMenuLevel.MainMenuLevel
