--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -136,29 +136,29 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="ToggleAim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="ToggleCrouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="ToggleRun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=CapsLock)
-+ActionMappings=(ActionName="ToggleSprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="ToggleCrouch",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=C)
++ActionMappings=(ActionName="ToggleRun",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=CapsLock)
++ActionMappings=(ActionName="ToggleSprint",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=LeftShift)
 +ActionMappings=(ActionName="primary weapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="ZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
-+ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
-+ActionMappings=(ActionName="Boost",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
++ActionMappings=(ActionName="ZoomIn",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=MouseScrollUp)
++ActionMappings=(ActionName="ZoomOut",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=MouseScrollDown)
++ActionMappings=(ActionName="Boost",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=LeftAlt)
 +ActionMappings=(ActionName="Flare",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="RagdollAction",bShift=True,bCtrl=True,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="SelectRotationMode_1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
-+ActionMappings=(ActionName="SelectRotationMode_2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
-+ActionMappings=(ActionName="CameraAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
-+ActionMappings=(ActionName="OpenOverlayMenu",bShift=False,bCtrl=True,bAlt=True,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="StanceAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
-+ActionMappings=(ActionName="No Weapons",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
-+ActionMappings=(ActionName="ZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Add)
-+ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
-+ActionMappings=(ActionName="Throw Grenade",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
-+ActionMappings=(ActionName="Throw Rock",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
-+ActionMappings=(ActionName="ThrowFlashbang",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
-+ActionMappings=(ActionName="ThrowSmokeGrenade",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
-+ActionMappings=(ActionName="ToggleBinocular",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="RagdollAction",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=Escape)
++ActionMappings=(ActionName="SelectRotationMode_1",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=Seven)
++ActionMappings=(ActionName="SelectRotationMode_2",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=Eight)
++ActionMappings=(ActionName="CameraAction",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=V)
++ActionMappings=(ActionName="OpenOverlayMenu",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=Q)
++ActionMappings=(ActionName="StanceAction",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=LeftAlt)
++ActionMappings=(ActionName="No Weapons",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=X)
++ActionMappings=(ActionName="ZoomIn",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=Add)
++ActionMappings=(ActionName="ZoomOut",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=None)
++ActionMappings=(ActionName="Throw Grenade",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=G)
++ActionMappings=(ActionName="Throw Rock",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=H)
++ActionMappings=(ActionName="ThrowFlashbang",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=J)
++ActionMappings=(ActionName="ThrowSmokeGrenade",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=K)
++ActionMappings=(ActionName="ToggleBinocular",bShift=True,bCtrl=True,bAlt=True,bCmd=True,Key=B)
 +ActionMappings=(ActionName="CycleThrowableSelection",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
