include boss level in build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="E:/Unreal Projects/CloudHuntBuild/Windows-Beta")
+StagingDirectory=(Path="C:/Users/ianwo/Downloads/CloudHunt")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -95,7 +95,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Levels/WorldLevel")
 +MapsToCook=(FilePath="/Game/Neon_City/Maps/CityLevel")
 +MapsToCook=(FilePath="/Game/WaterElements/WaterLevel")
-PerPlatformBuildConfig=()
++MapsToCook=(FilePath="/Game/Levels/BossLevel")
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
